python/metatensor_core/metatensor/_c_api.py

# fmt: off
# flake8: noqa
"""
This file declares the C-API corresponding to metatensor.h, in a way compatible
with the ctypes Python module.

This file is automatically generated by `scripts/update-declarations.py`,
do not edit it manually!
"""

import ctypes
import platform
from ctypes import CFUNCTYPE, POINTER

from ctypes_dlpack import DLDataType, DLDevice, DLManagedTensorVersioned, DLPackVersion


class _EnumType(type(ctypes.c_int32)):
    def __new__(metacls, name, bases, namespace):
        if "_members_" not in namespace:
            members = {}
            for key, value in namespace.items():
                if not key.startswith("_"):
                    members[key] = value
            namespace["_members_"] = members
        else:
            members = namespace["_members_"]

        namespace["_reverse_map_"] = {v: k for k, v in members.items()}
        return type(ctypes.c_int32).__new__(metacls, name, bases, namespace)

    def __repr__(self):
        return f"<Enum {self.__name__}>"


class _Enum(ctypes.c_int32, metaclass=_EnumType):
    _members_ = {}

    def __repr__(self):
        value_name = self._reverse_map_.get(self.value, str(self.value))
        return f"{self.__class__.__name__}.{value_name}"

    def __eq__(self, other):
        if isinstance(other, int):
            return self.value == other
        if type(self) is type(other):
            return self.value == other.value
        return NotImplemented

    def __hash__(self):
        return hash(self.value)


arch = platform.architecture()[0]
if arch == "32bit":
    c_uintptr_t = ctypes.c_uint32
elif arch == "64bit":
    c_uintptr_t = ctypes.c_uint64



class mts_status_t(_Enum):
    MTS_SUCCESS = 0
    MTS_INVALID_PARAMETER_ERROR = 1
    MTS_IO_ERROR = 2
    MTS_SERIALIZATION_ERROR = 3
    MTS_BUFFER_SIZE_ERROR = 4
    MTS_CALLBACK_ERROR = 254
    MTS_INTERNAL_ERROR = 255


class mts_block_t(ctypes.Structure):
    pass


class mts_labels_t(ctypes.Structure):
    pass


class mts_tensormap_t(ctypes.Structure):
    pass


class mts_data_movement_t(ctypes.Structure):
    pass


class mts_array_t(ctypes.Structure):
    pass


mts_data_origin_t = ctypes.c_uint64
mts_realloc_buffer_t = CFUNCTYPE(ctypes.c_char_p, ctypes.c_void_p, ctypes.c_char_p, c_uintptr_t)
mts_create_array_callback_t = CFUNCTYPE(mts_status_t, POINTER(c_uintptr_t), c_uintptr_t, DLDataType, POINTER(mts_array_t))


mts_data_movement_t._fields_ = [
    ("sample_in", c_uintptr_t),
    ("sample_out", c_uintptr_t),
    ("properties_start_in", c_uintptr_t),
    ("properties_start_out", c_uintptr_t),
    ("properties_length", c_uintptr_t),
]

mts_array_t._fields_ = [
    ("ptr", ctypes.c_void_p),
    ("destroy", CFUNCTYPE(None, ctypes.c_void_p)),
    ("origin", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(mts_data_origin_t))),
    ("device", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(DLDevice))),
    ("dtype", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(DLDataType))),
    ("as_dlpack", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(POINTER(DLManagedTensorVersioned)), DLDevice, POINTER(ctypes.c_int64), DLPackVersion)),
    ("from_dlpack", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(DLManagedTensorVersioned), POINTER(mts_array_t))),
    ("shape", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(POINTER(c_uintptr_t)), POINTER(c_uintptr_t))),
    ("reshape", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(c_uintptr_t), c_uintptr_t)),
    ("swap_axes", CFUNCTYPE(mts_status_t, ctypes.c_void_p, c_uintptr_t, c_uintptr_t)),
    ("create", CFUNCTYPE(mts_status_t, ctypes.c_void_p, POINTER(c_uintptr_t), c_uintptr_t, mts_array_t, POINTER(mts_array_t))),
    ("copy", CFUNCTYPE(mts_status_t, ctypes.c_void_p, DLDevice, POINTER(mts_array_t))),
    ("move_data", CFUNCTYPE(mts_status_t, ctypes.c_void_p, ctypes.c_void_p, POINTER(mts_data_movement_t), c_uintptr_t)),
]


def setup_functions(lib):
    from ._status import check_status

    lib.mts_disable_panic_printing.argtypes = [
    ]
    lib.mts_disable_panic_printing.restype = None

    lib.mts_version.argtypes = [
    ]
    lib.mts_version.restype = ctypes.c_char_p

    lib.mts_last_error.argtypes = [
        POINTER(ctypes.c_char_p),
        POINTER(ctypes.c_char_p),
        POINTER(POINTER(None)),
    ]
    lib.mts_last_error.restype = mts_status_t

    lib.mts_set_last_error.argtypes = [
        ctypes.c_char_p,
        ctypes.c_char_p,
        ctypes.c_void_p,
        CFUNCTYPE(None, ctypes.c_void_p),
    ]
    lib.mts_set_last_error.restype = check_status

    lib.mts_labels.argtypes = [
        POINTER(ctypes.c_char_p),
        c_uintptr_t,
        mts_array_t,
    ]
    lib.mts_labels.restype = POINTER(mts_labels_t)

    lib.mts_labels_assume_unique.argtypes = [
        POINTER(ctypes.c_char_p),
        c_uintptr_t,
        mts_array_t,
    ]
    lib.mts_labels_assume_unique.restype = POINTER(mts_labels_t)

    lib.mts_labels_dimensions.argtypes = [
        POINTER(mts_labels_t),
        POINTER(POINTER(ctypes.c_char_p)),
        POINTER(c_uintptr_t),
    ]
    lib.mts_labels_dimensions.restype = check_status

    lib.mts_labels_values.argtypes = [
        POINTER(mts_labels_t),
        POINTER(mts_array_t),
    ]
    lib.mts_labels_values.restype = check_status

    lib.mts_labels_values_cpu.argtypes = [
        POINTER(mts_labels_t),
        POINTER(POINTER(ctypes.c_int32)),
        POINTER(c_uintptr_t),
        POINTER(c_uintptr_t),
    ]
    lib.mts_labels_values_cpu.restype = check_status

    lib.mts_labels_position.argtypes = [
        POINTER(mts_labels_t),
        POINTER(ctypes.c_int32),
        c_uintptr_t,
        POINTER(ctypes.c_int64),
    ]
    lib.mts_labels_position.restype = check_status

    lib.mts_labels_clone.argtypes = [
        POINTER(mts_labels_t),
    ]
    lib.mts_labels_clone.restype = POINTER(mts_labels_t)

    lib.mts_labels_union.argtypes = [
        POINTER(mts_labels_t),
        POINTER(mts_labels_t),
        POINTER(POINTER(mts_labels_t)),
        POINTER(ctypes.c_int64),
        c_uintptr_t,
        POINTER(ctypes.c_int64),
        c_uintptr_t,
    ]
    lib.mts_labels_union.restype = check_status

    lib.mts_labels_intersection.argtypes = [
        POINTER(mts_labels_t),
        POINTER(mts_labels_t),
        POINTER(POINTER(mts_labels_t)),
        POINTER(ctypes.c_int64),
        c_uintptr_t,
        POINTER(ctypes.c_int64),
        c_uintptr_t,
    ]
    lib.mts_labels_intersection.restype = check_status

    lib.mts_labels_difference.argtypes = [
        POINTER(mts_labels_t),
        POINTER(mts_labels_t),
        POINTER(POINTER(mts_labels_t)),
        POINTER(ctypes.c_int64),
        c_uintptr_t,
    ]
    lib.mts_labels_difference.restype = check_status

    lib.mts_labels_select.argtypes = [
        POINTER(mts_labels_t),
        POINTER(mts_labels_t),
        POINTER(ctypes.c_uint64),
        POINTER(c_uintptr_t),
    ]
    lib.mts_labels_select.restype = check_status

    lib.mts_labels_free.argtypes = [
        POINTER(mts_labels_t),
    ]
    lib.mts_labels_free.restype = check_status

    lib.mts_register_data_origin.argtypes = [
        ctypes.c_char_p,
        POINTER(mts_data_origin_t),
    ]
    lib.mts_register_data_origin.restype = check_status

    lib.mts_get_data_origin.argtypes = [
        mts_data_origin_t,
        ctypes.c_char_p,
        c_uintptr_t,
    ]
    lib.mts_get_data_origin.restype = check_status

    lib.mts_block.argtypes = [
        mts_array_t,
        POINTER(mts_labels_t),
        POINTER(POINTER(mts_labels_t)),
        c_uintptr_t,
        POINTER(mts_labels_t),
    ]
    lib.mts_block.restype = POINTER(mts_block_t)

    lib.mts_block_free.argtypes = [
        POINTER(mts_block_t),
    ]
    lib.mts_block_free.restype = check_status

    lib.mts_block_copy.argtypes = [
        POINTER(mts_block_t),
    ]
    lib.mts_block_copy.restype = POINTER(mts_block_t)

    lib.mts_block_labels.argtypes = [
        POINTER(mts_block_t),
        c_uintptr_t,
    ]
    lib.mts_block_labels.restype = POINTER(mts_labels_t)

    lib.mts_block_gradient.argtypes = [
        POINTER(mts_block_t),
        ctypes.c_char_p,
        POINTER(POINTER(mts_block_t)),
    ]
    lib.mts_block_gradient.restype = check_status

    lib.mts_block_data.argtypes = [
        POINTER(mts_block_t),
        POINTER(mts_array_t),
    ]
    lib.mts_block_data.restype = check_status

    lib.mts_block_add_gradient.argtypes = [
        POINTER(mts_block_t),
        ctypes.c_char_p,
        POINTER(mts_block_t),
    ]
    lib.mts_block_add_gradient.restype = check_status

    lib.mts_block_gradients_list.argtypes = [
        POINTER(mts_block_t),
        POINTER(POINTER(ctypes.c_char_p)),
        POINTER(c_uintptr_t),
    ]
    lib.mts_block_gradients_list.restype = check_status

    lib.mts_block_device.argtypes = [
        POINTER(mts_block_t),
        POINTER(DLDevice),
    ]
    lib.mts_block_device.restype = check_status

    lib.mts_block_dtype.argtypes = [
        POINTER(mts_block_t),
        POINTER(DLDataType),
    ]
    lib.mts_block_dtype.restype = check_status

    lib.mts_tensormap.argtypes = [
        POINTER(mts_labels_t),
        POINTER(POINTER(mts_block_t)),
        c_uintptr_t,
    ]
    lib.mts_tensormap.restype = POINTER(mts_tensormap_t)

    lib.mts_tensormap_free.argtypes = [
        POINTER(mts_tensormap_t),
    ]
    lib.mts_tensormap_free.restype = check_status

    lib.mts_tensormap_copy.argtypes = [
        POINTER(mts_tensormap_t),
    ]
    lib.mts_tensormap_copy.restype = POINTER(mts_tensormap_t)

    lib.mts_tensormap_keys.argtypes = [
        POINTER(mts_tensormap_t),
    ]
    lib.mts_tensormap_keys.restype = POINTER(mts_labels_t)

    lib.mts_tensormap_block_by_id.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(POINTER(mts_block_t)),
        c_uintptr_t,
    ]
    lib.mts_tensormap_block_by_id.restype = check_status

    lib.mts_tensormap_keys_to_properties.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(mts_labels_t),
        mts_array_t,
        ctypes.c_bool,
    ]
    lib.mts_tensormap_keys_to_properties.restype = POINTER(mts_tensormap_t)

    lib.mts_tensormap_components_to_properties.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(ctypes.c_char_p),
        c_uintptr_t,
    ]
    lib.mts_tensormap_components_to_properties.restype = POINTER(mts_tensormap_t)

    lib.mts_tensormap_keys_to_samples.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(mts_labels_t),
        mts_array_t,
        ctypes.c_bool,
    ]
    lib.mts_tensormap_keys_to_samples.restype = POINTER(mts_tensormap_t)

    lib.mts_tensormap_set_info.argtypes = [
        POINTER(mts_tensormap_t),
        ctypes.c_char_p,
        ctypes.c_char_p,
    ]
    lib.mts_tensormap_set_info.restype = check_status

    lib.mts_tensormap_get_info.argtypes = [
        POINTER(mts_tensormap_t),
        ctypes.c_char_p,
        POINTER(ctypes.c_char_p),
    ]
    lib.mts_tensormap_get_info.restype = check_status

    lib.mts_tensormap_info_keys.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(POINTER(ctypes.c_char_p)),
        POINTER(c_uintptr_t),
    ]
    lib.mts_tensormap_info_keys.restype = check_status

    lib.mts_tensormap_device.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(DLDevice),
    ]
    lib.mts_tensormap_device.restype = check_status

    lib.mts_tensormap_dtype.argtypes = [
        POINTER(mts_tensormap_t),
        POINTER(DLDataType),
    ]
    lib.mts_tensormap_dtype.restype = check_status

    lib.mts_labels_load.argtypes = [
        ctypes.c_char_p,
    ]
    lib.mts_labels_load.restype = POINTER(mts_labels_t)

    lib.mts_labels_load_buffer.argtypes = [
        ctypes.c_char_p,
        c_uintptr_t,
    ]
    lib.mts_labels_load_buffer.restype = POINTER(mts_labels_t)

    lib.mts_labels_save.argtypes = [
        ctypes.c_char_p,
        POINTER(mts_labels_t),
    ]
    lib.mts_labels_save.restype = check_status
